src/objects/AB2__AdBook_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>General AdBook integration settings and Record Type mappings</description>
    <fields>
        <fullName>AB2__AccountClientName__c</fullName>
        <description>The API name of an Account field that will be mapped to the AdBook Client Name instead of the Account.Name field.</description>
        <inlineHelpText>The API name of an Account field that will be mapped to the AdBook Client Name instead of the Account.Name field.</inlineHelpText>
        <label>Account Client Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__AccountWideOrbitMappingField__c</fullName>
        <description>The API name of an Account field that will be synced to the Wide Orbit Advertiser Id in AdBook for the Client.</description>
        <inlineHelpText>The API name of an Account field that will be synced to the Wide Orbit Advertiser Id in AdBook for the Client.</inlineHelpText>
        <label>Account Wide Orbit Mapping Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__AdBookBillingContactProviderClassName__c</fullName>
        <description>Class that implements the AB2.AdBookContactProvider.AdBookBillingContactProvider interface to provide Billing Contacts for an Opportunity</description>
        <inlineHelpText>Class that implements the AB2.AdBookContactProvider.AdBookBillingContactProvider interface to provide Billing Contacts for an Opportunity</inlineHelpText>
        <label>AdBook BillingContact Provider ClassName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__AgencyCommissionDefault__c</fullName>
        <description>The default Agency Commission to apply to an Opportunity with Bill To = &apos;Agency&apos;. Typically 15%</description>
        <inlineHelpText>The default Agency Commission to apply to an Opportunity with Bill To = &apos;Agency&apos;. Typically 15%</inlineHelpText>
        <label>Agency Commission Default</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AB2__AgencyContact_Record_Type_ID__c</fullName>
        <label>AgencyContact Record Type ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__Agency_Record_Type_ID__c</fullName>
        <label>Agency Record Type ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__AllowHistoricDropReactivation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If &quot;Allow Drop Reactivation&quot; is active, can drops with an end date before today also be reactivated?</description>
        <inlineHelpText>If &quot;Allow Drop Reactivation&quot; is active, can drops with an end date before today also be reactivated?</inlineHelpText>
        <label>Allow Historic Drop Reactivation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__Allow_Drop_Reactivation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Can a cancelled AdBook Drop be reactivated? The End Date cannot be in the past.</description>
        <inlineHelpText>Can a cancelled AdBook Drop be reactivated? Reactivation will only be allowed if the End Date is in the future.</inlineHelpText>
        <label>Allow Drop Reactivation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__AppendAttachmentId__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When syncing Salesforce attachments to AdBook attachments, should the Salesforce attachment Id be appended to the filename to make it unique in AdBook?</description>
        <inlineHelpText>When syncing Salesforce attachments to AdBook attachments, should the Salesforce attachment Id be appended to the filename to make it unique in AdBook?</inlineHelpText>
        <label>Append Attachment Id</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__AutoLimitedSyncStageProbabilityThreshold__c</fullName>
        <description>(Deprecated)
Once an Opportunities Stage based probability reaches this threshold the order will be auto limited synced to AdBook</description>
        <inlineHelpText>Once an Opportunities Stage based probability reaches this threshold the order will be auto limited synced to AdBook</inlineHelpText>
        <label>(Deprecated)AutoLimitedSyncStageProbThre</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AB2__AutoMapSalesRep__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Automatically map Sales Rep by opportunity owner Id</description>
        <inlineHelpText>Check to map Sales Rep by opportunity owner Id when clicking &quot;Create\Update Order&quot; button</inlineHelpText>
        <label>Auto Map Sales Rep</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__AutoOpportunityEmailRepMapping__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should the AdBook Email Rep Map be used to automatically map fields from the Opportunity to AdBook Rep (Configured Contact) records?</description>
        <inlineHelpText>Should the AdBook Email Rep Map be used to automatically map fields from the Opportunity to AdBook Rep (Configured Contact) records?</inlineHelpText>
        <label>Auto Opportunity Email Rep Mapping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__AutoOpportunityUDFMapping__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should the AdBook UDF Map be used to automatically map fields from the Opportunity/Account to AdBook Order UDFs?</description>
        <inlineHelpText>Should the AdBook UDF Map be used to automatically map fields from the Opportunity/Account to AdBook Order UDFs?</inlineHelpText>
        <label>Auto UDF Mapping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__AutoRefreshOpportunityErrorEmail__c</fullName>
        <description>Email address to notify if there is an Error/Exception when auto refreshing flagged Opportunities from AdBook to Salesforce</description>
        <inlineHelpText>Email address to notify if there is an Error/Exception when auto refreshing flagged Opportunities from AdBook to Salesforce</inlineHelpText>
        <label>Auto Refresh Opportunity Error Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AB2__AutoSyncStageProbability__c</fullName>
        <description>(Deprecated)
Once an Opportunities Stage based probability reaches this threshold the order will be auto synced to AdBook</description>
        <inlineHelpText>Once an Opportunities Stage based probability reaches this threshold the order will be auto synced to AdBook</inlineHelpText>
        <label>(Deprecated)AutoSyncStageProbabilityThre</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AB2__AutoUpdateMediaElements__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When using Media Elements, check if the records stored in Salesforce match the current data in AdBook. If not, update the records in Salesforce.</description>
        <inlineHelpText>When using Media Elements, check if the records stored in Salesforce match the current data in AdBook. If not, update the records in Salesforce.</inlineHelpText>
        <label>Auto Update Media Elements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__Auto_Sync_AccountsAndContactsErrorEmail__c</fullName>
        <description>Email address to notify if there is an Error/Exception when auto syncing Accounts / Contacts from Salesforce to AdBook.</description>
        <inlineHelpText>Email address to notify if there is an Error/Exception when auto syncing Acconts / Contacts from Salesforce to AdBook.</inlineHelpText>
        <label>Auto Sync A&amp;C Error Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AB2__Auto_Sync_Accounts_and_Contacts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should any changes to Accounts and/or Contacts that are linked to AdBook be automatically synced? Only applicable to changes in AdBook fields.</description>
        <inlineHelpText>Should any changes to Accounts and/or Contacts that are linked to AdBook be automatically synced? Only applicable to changes in AdBook fields.</inlineHelpText>
        <label>Auto Sync Accounts and Contacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__BatchLimit__c</fullName>
        <defaultValue>100</defaultValue>
        <description>The maximum number of AsyncApexJobs (batch jobs) to create in the Processing, Preparing or Holding Status. The standard upper limit with the Apex Flex Queue enabled is 100. It is isn&apos;t enabled the limit is 5.</description>
        <inlineHelpText>The maximum number of AsyncApexJobs (batch jobs) to create in the Processing, Preparing or Holding Status. The standard upper limit with the Apex Flex Queue enabled is 100. It is isn&apos;t enabled the limit is 5.</inlineHelpText>
        <label>Batch Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AB2__BypassAgencyAccountTypeCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows for an AB Agency to be selected on the Opportunity that doesn&apos;t have the &apos;Agency&apos; ABAccountType__c.
Expectation is that the AB Agency will be corrected before a sync is attempted to AdBook.</description>
        <inlineHelpText>Allows for an AB Agency to be selected on the Opportunity that doesn&apos;t have the &apos;Agency&apos; ABAccountType__c.</inlineHelpText>
        <label>Bypass Agency Account Type Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__BypassDropIDUniquenessCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When saving an AdBook Drop the AB2__ABDropUnique__c field will mirror the AB2__ABDropId__c field to enforce uniqueness between OpportunityLineItem records. When checked, this step will be bypassed. This may be useful for orgs with existing records that need to be cleaned up.</description>
        <inlineHelpText>When checked, don&apos;t enforce uniqueness on the Opportunity Line Item AB2__ABDropId__c</inlineHelpText>
        <label>Bypass Drop ID Uniqueness check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__BypassSecurityModelChecks__c</fullName>
        <defaultValue>false</defaultValue>
        <description>By default the package code will enforce Object and Field Level Security when working with records. This setting bypasses the access level granted to the current user when performing CRUD operations. Rather than using this setting is is recommended that an Admin grant users a profile or permission set with sufficient access.</description>
        <inlineHelpText>By default the package code will enforce Object and Field Level Security when working with records. This setting bypasses the access level granted to the current user when performing CRUD operations. Recommend using profile or permission sets if possible</inlineHelpText>
        <label>Bypass Security Model Checks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__BypassSsoFederationIDValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Before performing a SSO login to AdBook a check is performed to ensure the User.FederationId is populated. Checking this custom setting bypasses that check. This is required if the connected app is configured to use another field as the SAML Subject Type.</description>
        <inlineHelpText>Before performing a SSO login to AdBook a check is performed to ensure the User.FederationId is populated. Checking this custom setting bypasses that check. This is required if the connected app is configured to use another field as the SAML Subject Type.</inlineHelpText>
        <label>Bypass SSO Federation ID Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__BypassWebsiteAvailabilityChecking__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Completely bypass website availability checking</description>
        <inlineHelpText>Completely bypass website availability checking</inlineHelpText>
        <label>Bypass Website Availability Checking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__CanvasEnv__c</fullName>
        <description>The value to pass the in the Env query string parameter to the Canvas App</description>
        <inlineHelpText>The value to pass the in the Env query string parameter to the Canvas App</inlineHelpText>
        <label>CanvasEnv</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__CanvasFullRefresh__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When using the Save and Go Back button in the canvas app, should just the drops be refreshed (unchecked) or should it be a full refresh (checked)?</description>
        <label>Canvas Full Refresh</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__CanvasResyncOnSubsequentAccess__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When accessing the AdBook Canvas App, sync only if the AB Order ID is blank (unchecked) or always (checked)</description>
        <inlineHelpText>When accessing the AdBook Canvas App, sync only if the AB Order ID is blank (unchecked) or always (checked)</inlineHelpText>
        <label>Canvas Resync On Subsequent Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__CanvasSso__c</fullName>
        <description>The value to pass the in the SSO query string parameter to the Canvas App</description>
        <inlineHelpText>The value to pass the in the SSO query string parameter to the Canvas App</inlineHelpText>
        <label>CanvasSso</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__CanvasSuppressDropSyncToAdBook__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, when using the &quot;Access AdBook&quot; canvas app the only the Opportunity details will be synced to AdBook. The Drops won&apos;t be sent on update.</description>
        <inlineHelpText>If checked, when using the &quot;Access AdBook&quot; canvas app the only the Opportunity details will be synced to AdBook. The Drops won&apos;t be sent on update.</inlineHelpText>
        <label>Canvas Suppress Drop Sync to AdBook</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__ClientContact_Record_Type_ID__c</fullName>
        <label>ClientContact Record Type ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__ClientNamePrefixMappingField__c</fullName>
        <description>An API Account field name that is mapped to a FieldValueMap of type &apos;AccountPrefixMapping&apos; as a prefix when syncing to AdBook.

NOTE: If &quot;Account Client Name&quot; is defined it will be used in preference.</description>
        <inlineHelpText>An API Account field name that is mapped to a FieldValueMap of type &apos;AccountPrefixMapping&apos; as a prefix when syncing to AdBook.

NOTE: If &quot;Account Client Name&quot; is defined it will be used in preference.</inlineHelpText>
        <label>Client Name Prefix Mapping Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__Client_Record_Type_ID__c</fullName>
        <label>Client Record Type ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__DateTimeDynamicPropertyFormat__c</fullName>
        <description>The Java SimpleDateFormat string for how to format DateTime values for sync with AdBook.
http://docs.oracle.com/javase/7/docs/api/java/text/SimpleDateFormat.html

Undefined defaults to ISO 8601 in UTC.</description>
        <inlineHelpText>The Java SimpleDateFormat string for how to format DateTime values for sync with AdBook.
http://docs.oracle.com/javase/7/docs/api/java/text/SimpleDateFormat.html</inlineHelpText>
        <label>UDF DateTime Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__DefaultPriceBookId__c</fullName>
        <description>The Price Book to use in preference of the &quot;IsStandard&quot; record if one isn&apos;t defined on an Opportunity.</description>
        <inlineHelpText>The Price Book to use in preference of the &quot;IsStandard&quot; record if one isn&apos;t defined on an Opportunity.</inlineHelpText>
        <label>Default Price Book Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__DefaultToMultilineDropEditing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should Multiline Drop Editing Default to checked on the Drop finishing page?</description>
        <inlineHelpText>Should Multiline Drop Editing Default to checked on the Drop finishing page?</inlineHelpText>
        <label>Default to Multiline Drop Editing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__Default_Country__c</fullName>
        <defaultValue>&quot;United States&quot;</defaultValue>
        <description>Default country to apply if undefined by user on Contact and Account records.</description>
        <inlineHelpText>Default country to apply if undefined by user</inlineHelpText>
        <label>Default Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__DelayABAgencyContactTypeCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Don&apos;t check that the Opportunity.AB2__ABAgencyContact__c.AB2__AB_Contact_Type_new__c includes &apos;Agency&apos; until an attempt is made to sync the record to AdBook.</description>
        <inlineHelpText>Don&apos;t check that the Opportunity.AB2__ABAgencyContact__c.AB2__AB_Contact_Type_new__c includes &apos;Agency&apos; until an attempt is made to sync the record to AdBook.</inlineHelpText>
        <label>Delay ABAgencyContact Type Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__DisableABSalesTeamClearing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Stop clearing the Sales Team field after creating\updating order</description>
        <inlineHelpText>Stop clearing the Sales Team field after creating\updating order</inlineHelpText>
        <label>Disable AB Sales Team Clearing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__DisableAdBookAccountTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, prevents the AdBookAccountTrigger from doing any processing</description>
        <inlineHelpText>When checked, prevents the AdBookAccountTrigger from doing any processing</inlineHelpText>
        <label>Disable AdBook Account Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__DisableAdBookDropToRevenueSchedule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disables the AdBookDropToRevenueSchedule trigger. 

For users engaged in development and debugging of Apex 
Triggers, users performing mass data loading or other resource-intensive tasks.</description>
        <inlineHelpText>Disables the AdBookDropToRevenueSchedule trigger. 

For users engaged in development and debugging of Apex 
Triggers, users performing mass data loading or other resource-intensive tasks.</inlineHelpText>
        <label>Disable AdBookDropToRevenueSchedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__DisableAdBookOpportunityLineItemTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disables the AdBookOpportunityLineItemTrigger trigger. 

For users engaged in development and debugging of Apex 
Triggers, users performing mass data loading or other resource-intensive tasks.</description>
        <inlineHelpText>Disables the AdBookOpportunityLineItemTrigger trigger. 

For users engaged in development and debugging of Apex 
Triggers, users performing mass data loading or other resource-intensive tasks.</inlineHelpText>
        <label>Disable AdBookOpportunityLineItemTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__DisableAdBookOpportunityTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disables the AdBookOpportunityTrigger trigger. This trigger validates the AdBook fields on the Opportunity.

For users engaged in development and debugging of Apex 
Triggers, users performing mass data loading or other resource-intensive tasks.</description>
        <inlineHelpText>Disables the AdBookOpportunityTrigger trigger. This trigger validates the AdBook fields on the Opportunity.

For users engaged in development and debugging of Apex 
Triggers, users performing mass data loading or other resource-intensive tasks.</inlineHelpText>
        <label>Disable AdBook Opportunity Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__DisableAgencyContactToAccountLinkage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Skip the validation requirement that the Agency Contact is related to the Account indicated by the AB Bill To setting.</description>
        <inlineHelpText>Skip the validation requirement that the Agency Contact is related to the Account indicated by the AB Bill To setting.</inlineHelpText>
        <label>Disable Agency Con to Account Linkage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__DisableBillingContactToAccountLinkage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Skip the validation requirement that the Billing Contact is related to the Account indicated by the AB Bill To setting.</description>
        <inlineHelpText>Skip the validation requirement that the Billing Contact is related to the Account indicated by the AB Bill To setting.</inlineHelpText>
        <label>Disable Billing Con to Account Linkage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__DisableContactToAccountLinkage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check to removed the verification that the Contact is related to the Account. 
Corresponds to the message:
The AB Client Contact must be linked to the selected client (Account).</description>
        <inlineHelpText>Check to removed the verification that the Contact is related to the Account</inlineHelpText>
        <label>Disable Contact to Account Linkage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__DisableDiscount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Don&apos;t display the Drop level Discount even if the field is accessible to the user.</description>
        <inlineHelpText>Don&apos;t display the Drop level Discount even if the field is accessible to the user.</inlineHelpText>
        <label>Disable Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__DisableMaterialsContactToAccountLinkage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Skip the validation requirement that the Materials Contact is related to the Account indicated by the AB Bill To setting.</description>
        <inlineHelpText>Skip the validation requirement that the Materials Contact is related to the Account indicated by the AB Bill To setting.</inlineHelpText>
        <label>Disable Materials Con to Account Linkage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__DisableRefreshDrop__c</fullName>
        <defaultValue>false</defaultValue>
        <description>(Deprecated) Check to disable &apos;Refresh Drop&apos; function for opportunity
Replaced by AdBook Sync Settings SalesforceSyncFromAdBook__c</description>
        <inlineHelpText>Check to disable &apos;Refresh Drop&apos; function for opportunity</inlineHelpText>
        <label>(Deprecated) Disable Refresh Drop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__DisableRefreshOrder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>(Deprecated) Check to disable &apos;Refresh Order&apos; function for opportunity
Replaced by AdBook Sync Settings SalesforceSyncFromAdBook__c</description>
        <inlineHelpText>Check to disable &apos;Refresh Order&apos; function for opportunity</inlineHelpText>
        <label>(Deprecated) Disable Refresh Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__DisableUpdateOrder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>(Deprecated) Check to disable &apos;Update Order&apos; function for opportunity
Replaced by AdBook Sync Settings SalesforceSyncToAdBook__c</description>
        <inlineHelpText>Check to disable &apos;Update Order&apos; function for opportunity</inlineHelpText>
        <label>(Deprecated) Disable Update Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__DropDynamicPropertiesExpanded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Are the Drop UDF values expanded by default when a user arrives on the page?</description>
        <inlineHelpText>Are the Drop UDF values expanded by default when a user arrives on the page?</inlineHelpText>
        <label>Drop UDFs Expanded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__EnableDropBillingModel__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow users to define the Drop Billing Model. When disabled the value won&apos;t be updated by the refresh from AdBook process either.</description>
        <inlineHelpText>Allow users to define the Drop Billing Model</inlineHelpText>
        <label>Enable Drop Billing Model</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__EnableMultilineDropEditing__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Can the user edit multiple drop records at once?</description>
        <inlineHelpText>Can the user edit multiple drop records at once?</inlineHelpText>
        <label>Enable Multiline Drop Editing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__EnableUserDefinedPackagePricing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow for a price to be set at the package container level and have the adjusted price change cascade to each of the selected components.</description>
        <inlineHelpText>Allow for a price to be set at the package container level and have the adjusted price change cascade to each of the selected components.</inlineHelpText>
        <label>Enable User Defined Package Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__FreeFormLabel__c</fullName>
        <description>Label to display for AdBook Free Form Media Type</description>
        <inlineHelpText>Label to display for AdBook Free Form Media Type</inlineHelpText>
        <label>FreeFormLabel</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__HideRateCardDetails__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hide the Rate Card Name and Rate Card Rate columns</description>
        <inlineHelpText>Hide the Rate Card Name and Rate Card Rate columns</inlineHelpText>
        <label>Hide Rate Card Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__HideSaveDropAdBookID__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should the &quot;AdBook ID&quot; on the drop finishing page be hidden?</description>
        <inlineHelpText>Should the &quot;AdBook ID&quot; on the drop finishing page be hidden?</inlineHelpText>
        <label>Hide SaveDrop AdBookID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__HideSaveDropDropCost__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should the &quot;Drop Cost&quot; on the drop finishing page be hidden?</description>
        <inlineHelpText>Should the &quot;Drop Cost&quot; on the drop finishing page be hidden?</inlineHelpText>
        <label>Hide SaveDrop DropCost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__HideSaveDropEndDate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should the &quot;End Date&quot; on the drop finishing page be hidden?</description>
        <inlineHelpText>Should the &quot;End Date&quot; on the drop finishing page be hidden?</inlineHelpText>
        <label>Hide SaveDrop EndDate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__HideSaveDropImpressions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should the &quot;Impressions&quot; on the drop finishing page be hidden?</description>
        <inlineHelpText>Should the &quot;Impressions&quot; on the drop finishing page be hidden?</inlineHelpText>
        <label>Hide SaveDrop Impressions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__HideSaveDropPositionPath__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should the &quot;Position Path&quot; on the drop finishing page be hidden?</description>
        <inlineHelpText>Should the &quot;Position Path&quot; on the drop finishing page be hidden?</inlineHelpText>
        <label>Hide SaveDrop PositionPath</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__HideSaveDropPriceEntered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should the &quot;Price Entered&quot; on the drop finishing page be hidden?</description>
        <inlineHelpText>Should the &quot;Price Entered&quot; on the drop finishing page be hidden?</inlineHelpText>
        <label>Hide SaveDrop PriceEntered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__HideSaveDropPriceType__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should the &quot;Price Type&quot; on the drop finishing page be hidden?</description>
        <inlineHelpText>Should the &quot;Price Type&quot; on the drop finishing page be hidden?</inlineHelpText>
        <label>Hide SaveDrop PriceType</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__HideSaveDropStartDate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should the &quot;Start Date&quot; on the drop finishing page be hidden?</description>
        <inlineHelpText>Should the &quot;Start Date&quot; on the drop finishing page be hidden?</inlineHelpText>
        <label>Hide SaveDrop StartDate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__HideSaveDropUnits__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should the &quot;Units&quot; on the drop finishing page be hidden?</description>
        <inlineHelpText>Should the &quot;Units&quot; on the drop finishing page be hidden?</inlineHelpText>
        <label>Hide SaveDrop Units</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__HideUnavailableNewsletterDrops__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Scheduled drops which are already on inventory-taking campaigns are displayed “FYI” only, they are not selectable.  Check to hide these records by default.</description>
        <inlineHelpText>Scheduled drops which are already on inventory-taking campaigns are displayed “FYI” only, they are not selectable.  Check to hide these records by default.</inlineHelpText>
        <label>Hide Unavailable Newsletter Drops</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__ImpressionsPastOversellAvailability__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow Impressions to be booked past the Available Impressions. No upper limit is enforced. Only applies to Website Media</description>
        <inlineHelpText>Allow Impressions to be booked past the Available Impressions. No upper limit is enforced. Only applies to Website Media</inlineHelpText>
        <label>Impressions Past Oversell Availability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__ImpressionsUpToOversellAvailability__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow Impressions Up To the Oversell Availability
Only applies to Website Media</description>
        <inlineHelpText>Allow Impressions Up To the Oversell Availability
Only applies to Website Media</inlineHelpText>
        <label>Impressions up to Oversell Availability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__InitialConfigurationComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Once the initial configuration via the AdBook Administration tab is complete this option will disable functions that should not be invoked again.</description>
        <inlineHelpText>Once the initial configuration via the AdBook Administration tab is complete this option will disable functions that should not be invoked again.</inlineHelpText>
        <label>Initial Configuration Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__InternalLoggingLevel__c</fullName>
        <description>At what System.LoggingLevel will the managed package log at? Typically debug statements from the package are hidden, so this is only useful for LMA based debugging.</description>
        <inlineHelpText>At what System.LoggingLevel will the managed package log at? Typically debug statements from the package are hidden, so this is only useful for LMA based debugging.</inlineHelpText>
        <label>Internal Logging Level</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>